--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^2.0.0
+  page_transition: ^2.0.1-nullsafety.0
+  dio: ^4.0.0-beta7
+  provider: ^4.3.2+2
+  fluttertoast: 8.0.3
 
 dev_dependencies:
   flutter_test:
